--- a/layout-5/styles/style.css
+++ b/layout-5/styles/style.css
@@ -1,5 +1,101 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.clearfix:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+
 .graybox {
   background-color: lightgray;
   border: 1px solid darkgray;
+  box-sizing: border-box;
+}
+
+.space {
   margin: 1%;
+}
+
+header {
+  position: relative;
+  height: 80px;
+}
+
+.logo {
+  position: absolute;
+  float: left;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 50px;
+}
+
+nav {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50%;
+  height: 50px;
+}
+
+.navitem {
+  float: right;
+}
+
+main {
+  position: relative;
+}
+
+aside {
+  width: 20%;
+  height: 500px;
+  position: absolute;
+  left: 0;
+}
+
+.article {
+  position: absolute;
+  right: 0;
+  width: 79%;
+}
+
+.firstrow {
+  height: 100px;
+}
+
+.secondrow {
+  position: relative;
+  height: 200px;
+}
+
+.words {
+  position: absolute;
+  left: 0;
+  width: 69%;
+  height: 180px;
+}
+
+.ads {
+  position: absolute;
+  right: 0;
+  width: 29%;
+  height: 180px;
+}
+
+.thirdrow {
+  display: block;
+  height: 100px;
+}
+
+.smallitem {
+  float: left;
+  width: 25%;
+  height: 80px;
+}
+
+footer {
+  height: 50px;
 }
